Feat: Add Explorer (#10)
* checkpoint: add explorer

* checkpoint: add explorer

* checkpoint: production readiness

* fix: gitleaks
